k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: bmi-app
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: bmi-app
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: bmi-app
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
